--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,2 @@
 NESSY_DEV_KEY=b6b7b44d940f75ac0a10badeeadc9052
+ATLAS_URI=mongodb+srv://user:admin@mycash-jwgjn.gcp.mongodb.net/test?retryWrites=true&w=majority
