--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,10 @@
     "cors": "^2.8.5",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
+    "express-session": "^1.16.2",
     "mongoose": "^5.7.1",
+    "passport": "^0.4.0",
+    "passport-local-mongoose": "^5.0.1",
     "request": "^2.88.0"
   }
 }
