--- a/client/package.json
+++ b/client/package.json
@@ -3,10 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "express": "^4.17.1",
     "react": "^16.9.0",
+    "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.9.0",
-    "react-scripts": "2.1.8"
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "^2.1.8"
   },
   "scripts": {
     "start": "react-scripts start",
