--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
+    "client-sessions": "^0.8.0",
     "cors": "^2.8.5",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
